HEAD
	+ Events: Add possibility to enable watchers by default
1.5
	+ Use built-in authentication
	+ Use new upstart directory "init" instead of "event.d"
	+ Use new libjson-perl API
	+ Increase PerlInterpMaxRequests to 200
	+ Increase MaxRequestsPerChild (mpm-worker) to 200
	+ Fix issue with enconding in Ajax error responses
	+ Loggerd: if we don't have any file to watch we just sleep otherwise the process
	  will finish and upstart will try to start it over again and again.
	+ Make /etc/init.d/ebox depend on $network virtual facility
1.4.2
	+ Start services in the appropriate order (by dependencies) to fix a problem
	  when running /etc/init.d/ebox start in slaves (mail and other modules
	  were started before usersandgroups and thus failed)
1.4.1
	+ Remove network workarounds from /etc/init.d/ebox as we don't bring
	  interfaces down anymore
1.4
	+ Bug fix: i18n. setDomain in composites and models.
1.3.19
	+ Make the module dashboard widget update as the rest of the widgets
	+ Fix problem regarding translation of module names: fixes untranslated
	  module names in the dashboard, module status and everywhere else where
	  a module name is written
1.3.18
	+ Add version comparing function and use it instead of 'gt' in the
	  general widget
1.3.17
	+ Minor bug fix: check if value is defined in EBox::Type::Union
1.3.16
	+ Move enable field to first row in ConfigureDispatcherDataTable
	+ Add a warning to let users know that a module with unsaved changes
	  is disabled
	+ Remove events migration directory:
		- 0001_add_conf_configureeventtable.pl
		- 0002_add_conf_diskfree_watcher.pl
	+ Bug fix: We don't use names to stringify date to avoid issues
	  with DB insertions and localisation in event logging
	+ Bug fix: do not warn about disabled services which return false from
	  showModuleStatus()
	+ Add blank line under "Module Status"
	+ Installed and latest available versions of the core are now displayed
	  in the General Information widget
1.3.15