@@ -983,6 +983,9 @@ sub row
         my $element = $type->clone();
         $element->setRow($row);
         $element->restoreFromHash();
+        if ( (not defined($element->value())) and $element->defaultValue()) {
+            $element->setValue($element->defaultValue());
+        }
         $row->addElement($element);
     }
 
